<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_register_scene"
    tools:context=".view.register.RegisterActivity"
    android:background="@drawable/app_theme_potrait"
    >

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/app_logo"
        android:layout_width="124dp"
        android:layout_height="124dp"
        android:src="@drawable/app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <LinearLayout
        android:id="@+id/register_form"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:paddingHorizontal="36dp"
        android:paddingTop="40dp"
        >
        <TextView
            android:id="@+id/register_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_marginBottom="18dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="@color/white"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_name_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:helperText="@string/required"
            app:helperTextTextColor="@color/red"
            android:layout_marginBottom="18dp"
            app:errorEnabled="true"
            app:errorIconDrawable="@null"
            >
            <com.example.storyapp.components.CustomEditText
                android:id="@+id/register_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:textColorHint="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_email_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:helperText="@string/required"
            app:helperTextTextColor="@color/red"
            android:layout_marginBottom="18dp"
            app:errorEnabled="true"
            app:errorIconDrawable="@null"
            >
            <com.example.storyapp.components.CustomEditText
                android:id="@+id/register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColorHint="@color/white"
                android:inputType="textEmailAddress"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_password_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:helperText="@string/required"
            app:helperTextTextColor="@color/red"
            android:layout_marginBottom="18dp"
            app:errorEnabled="true"
            app:errorIconDrawable="@null"
            >
            <com.example.storyapp.components.CustomEditText
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColorHint="@color/white"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:backgroundTint="@color/dark_blue"
            android:textColor="@color/white"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/login_label"
        android:alpha="0"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_form"
        android:text="@string/login_message"
        android:textColor="@color/white"
        android:textSize="12sp"
        />

</androidx.constraintlayout.motion.widget.MotionLayout>