<?xml version="1.0" encoding="utf-8"?>
<com.faltenreich.skeletonlayout.SkeletonLayout
    android:id="@+id/skeleton_detail_story"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.detailstory.DetailStoryActivity"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.detailstory.DetailStoryActivity">

        <ImageView
            android:id="@+id/story_img"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp"
            tools:src="@tools:sample/avatars"
            />

        <TextView
            android:id="@+id/detail_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/story_img"
            android:text="@string/name"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:textSize="24sp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            />

        <TextView
            android:id="@+id/detail_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_name"
            android:text="@string/date"
            android:textSize="12sp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            />

        <TextView
            android:id="@+id/detail_description_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_date"
            android:text="@string/description"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            />

        <TextView
            android:id="@+id/detail_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_description_label"
            android:text="@string/description"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.faltenreich.skeletonlayout.SkeletonLayout>
